--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,5 +1,9 @@
 .app {
-  display: grid;
-  grid-template-columns: repeat(3,1fr);
-  grid-gap: 50px;
+  display: flex;
+  flex-direction: column;
+}
+
+.box {
+  justify-content: center;
+  padding: 0 100px;
 }
